@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Convert to the cabal test compatible test suite
 0.10.7
     Support time-1.2
     #71, fix a bug when requesting all three outputs from command
